# news-summarizer

./: .env  .gitignore  README.md  TASK_DESIGN.md  backend.sh  frontend.sh  start.sh
backend/: __init__.py  extensions.py  pyproject.toml
backend/models/: article.py
backend/routes/: api.py
backend/utils/: enums.py  gemini.py  rss_parser.py  scheduler.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AdminDashboard.vue  MarkdownRenderer.vue
frontend/src/router/: index.js
frontend/src/stores/: chat.js
frontend/src/utils/: sanitize.js
frontend/src/views/: HomeView.vue
instance/: db.sqlite
